from enum import Enum


class StatusEnum(Enum):
    UP = 1
    DOWN = -1
    LEVEL = 0
    ALLOCATED = 3
